--- a/source/style/base/_radio.scss
+++ b/source/style/base/_radio.scss
@@ -45,7 +45,7 @@
       background: $accent;
       border-radius: 50%;
       opacity: 0;
-      transition: opacity 0.2s ease;
+      @include trs;
     }
   }
 }
