--- a/source/style/config/_variables.scss
+++ b/source/style/config/_variables.scss
@@ -9,8 +9,8 @@
 //----------------------------------------------------//
 // 1. Global                                          //
 //----------------------------------------------------//
-$global-transition: all 0.3s ease-in-out;
-$global-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
+$global-transition: all .3s ease-in-out;
+$global-shadow: 1px 1px 10px rgba(0, 0, 0, .4);
 $global-radius: 5px;
 $global-rounded: 30px;
 $global-padding: 16px;
