--- a/source/style/base/_checkbox.scss
+++ b/source/style/base/_checkbox.scss
@@ -45,7 +45,7 @@
       left: 5px;
       margin: -5px 0 0 0;
       opacity: 0;
-      transition: opacity 0.2s ease;
+      @include trs;
     }
   }
 }
