--- a/source/template/modules/preloader/preloader.scss
+++ b/source/template/modules/preloader/preloader.scss
@@ -30,10 +30,10 @@
 }
 
 $tcon-size: 40px !default;
-$tcon-transition: 0.3s !default;
+$tcon-transition: .3s !default;
 $tcon-jstransform: 'tcon-transform' !default;
 
-$spinner_speed: 0.675s !default;
+$spinner_speed: .675s !default;
 $spinner_radius: 80% !default;
 $spinner_fill_radius: 90px !default;
 
