--- a/source/template/modules/header/header.pug
+++ b/source/template/modules/header/header.pug
@@ -17,4 +17,4 @@ mixin header(mods)
 
   header.header(class= allMods)
     .container
-      h1 Header
+      img(src="assets/img/logo.jpg" alt="logo")
