--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -22,7 +22,8 @@ html
     link(rel="stylesheet" href="assets/css/app%=suffix=%.css%=version=%")
 
 
-    <!--[if lt IE 9]>
+    <!--[if gte IE 9]>    
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
     script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
     script(src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js")
     <![endif]-->
