--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -10,7 +10,7 @@ html
     meta(content="" name="author")
     meta(content="" name="description")
     meta(content="" name="keywords")
-    meta(content="width=device-width, initial-scale=1" name="viewport")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
     meta(content="ie=edge" http-equiv="x-ua-compatible")
 
     // favicon block start
