--- a/source/style/fonts.scss
+++ b/source/style/fonts.scss
@@ -1,4 +1,4 @@
-@import '../config/mixins';
+@import 'config/mixins';
 
 //EXAMPLE RM THIS!!!
 //@include font-face('PT Sans', '../fonts/ptsans/regular/PTSans-Regular', 400);
