--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -28,6 +28,9 @@ html
     script(src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js")
     <![endif]-->
 
+    style
+      include ../fonts/fonts.css
+
   body
     block content       
      
