some style fixes

--- a/source/style/base/_typography.scss
+++ b/source/style/base/_typography.scss
@@ -188,7 +188,7 @@ img[align='right'] {
 
       &:nth-child(odd) {
 
-        td { /* stylelint-disable-line */ //I'm already on the dark side!
+        td {
           background-color: #f4f4f4;
         }
       }
