--- a/source/style/fonts.scss
+++ b/source/style/fonts.scss
@@ -1,6 +1,6 @@
 @import 'config/mixins';
 
 //EXAMPLE RM THIS!!!
-//@include font-face('PT Sans', '../fonts/ptsans/regular/PTSans-Regular', 400);
-//@include font-face('PT Sans','../fonts/ptsans/regular/PTSans-Regular', 400, italic);
-//@include font-face('PT Sans', '../fonts/ptsans/bold/ptsansbold', 700);
+//@include font-face('PT Sans', 'assets/fonts/ptsans/regular/PTSans-Regular', 400);
+//@include font-face('PT Sans','assets/fonts/ptsans/regular/PTSans-Regular', 400, italic);
+//@include font-face('PT Sans', 'assets/fonts/ptsans/bold/ptsansbold', 700);
