--- a/source/template/modules/footer/footer.pug
+++ b/source/template/modules/footer/footer.pug
@@ -15,6 +15,6 @@ mixin footer(mods)
       }
     }
 
-  footer.footer(class=allMods data-controller="footer")
+  footer.footer(class=allMods)
     .container
       h1 I'm Footer
