--- a/source/style/base/_layout.scss
+++ b/source/style/base/_layout.scss
@@ -8,6 +8,8 @@
 body {
   height: 100%;
   min-width: 320px;
+  display: flex;
+  flex-direction: column;
 }
 
 html {
@@ -22,6 +24,6 @@ html {
 }
 
 .wrapper {
-  min-height: 100%;
+  flex: 1 0 auto;
   overflow: hidden;
 }
