--- a/source/template/components/header/header.pug
+++ b/source/template/components/header/header.pug
@@ -15,6 +15,6 @@ mixin header(mods)
       }
     }
 
-  header.header(class= allMods)
+  header.header(class= allMods data-controller='header')
     .container
       img(src="assets/img/logo.jpg" alt="logo")
