--- a/source/template/mixins/_mixin-list.pug
+++ b/source/template/mixins/_mixin-list.pug
@@ -1,10 +1,10 @@
 //- ВНИМАНИЕ! Этот файл генерируется автоматически. Не пишите сюда ничего вручную!
 //- Читайте ./README.md для понимания.
 
-include lipsum
-include ../modules/header/header
-include ../modules/icon/icon
-include ../modules/footer/footer
-include ../modules/img/img
-include ../modules/checkbox/checkbox
-include ../modules/radio/radio
+include ./lipsum/lipsum
+include ./icon/icon
+include ./img/img
+include ./checkbox/checkbox
+include ./radio/radio
+include ../components/header/header
+include ../components/footer/footer
